tests/assets/test_suites/w3c_wsdl20/documents/good/UnknownExtension-2G/Interface.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/UnknownExtension-2G/Interface.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:unknown="http://example.org/unknown-wsdl-extension">

	<wsdl:documentation>
		This test shows a valid use of a WSDL 2.0 interface with an
		optional unknown extension element. The extension is implicitly
		marked as optional.
	</wsdl:documentation>

	<wsdl:interface name="myInterface">
		<unknown:extension />
	</wsdl:interface>

</wsdl:description>
