tests/assets/test_suites/w3c_wsdl20/documents/bad/Schema-6B/Schema.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/Schema-6B/Schema.wsdl -->
<!-- Copyright © 2007-03-23 05:50 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema"
	xmlns:tns="http://example.org/"
	xmlns:person="http://example.org/Person/">

	<wsdl:documentation>
		This test shows an invalid use of a inline schema.
		The same element is defined in two inline schemas.
		
		This test violates assertions Schema-1073 and
		Types-1007.
	</wsdl:documentation>
	
	<wsdl:types>
		<xs:schema targetNamespace="http://example.org">
			<xs:element name="element" type="xs:string"/>
		</xs:schema>
		<xs:schema targetNamespace="http://example.org">
			<xs:element name="element" type="xs:string"/>
		</xs:schema>
	</wsdl:types>
</wsdl:description>
